--- a/painprism.css
+++ b/painprism.css
@@ -17,7 +17,7 @@
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   font-weight: normal;
-  font-size: 7vw; 
+  font-size: 80px; 
   letter-spacing: 1px;
   text-shadow: 0px 1px 45px red;
   text-align: center;
@@ -47,7 +47,7 @@
 	border: 0;
 	white-space: nowrap;
 	text-decoration: none;
-	font-size: 5vw; 
+	font-size: 45px; 
 	font-weight: 400;
 	cursor: none;
 	border-radius: 3px;
@@ -77,7 +77,7 @@
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   font-weight: normal;
-font-size: 3.4vw;
+    font-size: 40px; 
   letter-spacing: 0.5px;
   text-shadow: 2px 2px 76px red;
   text-align: center;}
@@ -100,7 +100,7 @@ font-size: 3.4vw;
   font-weight: normal;
   letter-spacing: 0.5px;
   text-shadow: 2px 2px 76px indianred;
-   font-size: 3.4vw; 
+    font-size: 40px; 
 
 }
 
@@ -121,7 +121,7 @@ font-size: 3.4vw;
 
   letter-spacing: 0.5px;
   text-shadow: 2px 2px 76px indianred;
-  font-size: 3.4vw;
+    font-size: 40px; 
   text-align: center;}
 
 .btnconnect {background-color: transparent;
@@ -141,7 +141,7 @@ font-size: 3.4vw;
 
   letter-spacing: 0.5px;
   text-shadow: 2px 2px 76px indianred;
-font-size: 3.4vw;
+    font-size: 40px; 
     text-align: center;
 }
 
