--- a/painprism.css
+++ b/painprism.css
@@ -17,7 +17,7 @@
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   font-weight: normal;
-   font-size: 6vw;
+font-size: 4em;
   letter-spacing: 1px;
   text-shadow: 0px 1px 45px red;
   text-align: center;
