--- a/painprism.css
+++ b/painprism.css
@@ -1,4 +1,6 @@
 * {margin: 0;padding: 0}
+@media all and (max-width: 699px) and (min-width: 520px), (min-width: 1151px) {
+
 
 	body {
 			background-color: black;
